--- a/js/test/address/nodeunit/testSuiteAsync.html
+++ b/js/test/address/nodeunit/testSuiteAsync.html
@@ -30,11 +30,10 @@ limitations under the License.
             exports: {}
         };
     </script>
-    <script src="testdateasync.js"></script>
-    <script src="testdatefmtasync.js"></script>
+    <script src="testaddressasync.js"></script>
   </head>
   <body>
-    <h1 id="nodeunit-header">Async Date Test Suite</h1>
+    <h1 id="nodeunit-header">Async Address Test Suite</h1>
     <script>
      nodeunit.run(module.exports);
     </script>
