--- a/js/test/collate/nodeunit/testSuiteAsync.html
+++ b/js/test/collate/nodeunit/testSuiteAsync.html
@@ -1,7 +1,7 @@
 <!--
-testSuiteAsync.html - browser-based test suite for this directory
+testSuite.html - browser-based test suite for this directory
 
-Copyright © 2018, JEDLSoft
+Copyright © 2017, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -30,11 +30,11 @@ limitations under the License.
             exports: {}
         };
     </script>
-    <script src="testdateasync.js"></script>
-    <script src="testdatefmtasync.js"></script>
+    <script src="testalphaindexasync.js"></script>
+    <script src="testcollationasync.js"></script>
   </head>
   <body>
-    <h1 id="nodeunit-header">Async Date Test Suite</h1>
+    <h1 id="nodeunit-header">Async Collate Test Suite</h1>
     <script>
      nodeunit.run(module.exports);
     </script>
