--- a/js/test/maps/nodeunit/testSuite.html
+++ b/js/test/maps/nodeunit/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017-2018, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -31,6 +31,7 @@ limitations under the License.
         };
     </script>
     <script src="testcharmap.js"></script>
+    <script src="testcharmapasync.js"></script>
     <script src="testcm_CN.js"></script>
     <script src="testcm_ISO-8859-1.js"></script>
     <script src="testcm_JP.js"></script>
