--- a/js/test/maps/nodeunit/testSuiteAsync.html
+++ b/js/test/maps/nodeunit/testSuiteAsync.html
@@ -1,7 +1,7 @@
 <!--
-testSuite.html - browser-based test suite for this directory
+testSuiteAsync.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2018, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -24,24 +24,16 @@ limitations under the License.
         var module = {};
     </script>
     <script src="/test/nodeunit/nodeunit.js"></script>
-    <script src="/output/js/ut/assembled/ilib-ut.js"></script>
+    <script src="/output/js/ut/assembled/ilib-ut-dyn.js"></script>
     <script>
         module = {
             exports: {}
         };
     </script>
-    <script src="testcharmap.js"></script>
-    <script src="testcm_CN.js"></script>
-    <script src="testcm_ISO-8859-1.js"></script>
-    <script src="testcm_JP.js"></script>
-    <script src="testcm_KR.js"></script>
-    <script src="testcm_UTF-16.js"></script>
-    <script src="testcm_UTF-8.js"></script>
-    <script src="testtolower.js"></script>
-    <script src="testtoupper.js"></script>
+    <script src="testcharmapasync.js"></script>
   </head>
   <body>
-    <h1 id="nodeunit-header">maps Test Suite</h1>
+    <h1 id="nodeunit-header">Async Maps Test Suite</h1>
     <script>
      nodeunit.run(module.exports);
     </script>
