--- a/js/test/units/nodeunit/testSuite.html
+++ b/js/test/units/nodeunit/testSuite.html
@@ -46,7 +46,7 @@ limitations under the License.
     <script src="testunits.js"></script>
     <script src="testunitfmtasync.js"></script>
     <script src="testdigitalspeed.js"></script>
-    <script src="testunitfmt.js_usages"></script>
+    <script src="testunitfmt_usages.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">units Test Suite</h1>
