--- a/js/test/date/nodeunit/testSuite.html
+++ b/js/test/date/nodeunit/testSuite.html
@@ -37,6 +37,7 @@ limitations under the License.
     <script src="testdatefmt_af_NA.js"></script>
     <script src="testdatefmt_af_ZA.js"></script>
     <script src="testdatefmt_am_ET.js"></script>
+    <script src="testdatefmt_ar_EG.js"></script>
     <script src="testdatefmt_ar_SA.js"></script>
     <script src="testdatefmt_as_IN.js"></script>
     <script src="testdatefmt_az_Latn_AZ.js"></script>
