Fix async html tests.
We can't do real async tests with the asembled ilib yet
because the dynamic loading of data depends on webpack.
Instead, here we use an assembled version of ilib and ensure
that the calls with async callbacks work correctly. These
tests will become more useful when the webpack support is
added.

--- a/js/test/testSuiteAsync.html
+++ b/js/test/testSuiteAsync.html
@@ -25,7 +25,7 @@ limitations under the License.
         var module = {};
     </script>
     <script src="/test/nodeunit/nodeunit.js"></script>
-    <script src="/output/js/ut/dynamic/ilib-ut-dyn.js"></script>
+    <script src="/output/js/ilib-ut.js"></script>
     <script src="strings-ext/test/normdata.js"></script>
     <script>
         var suites = {};
