--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -81,7 +81,7 @@ limitations under the License.
     <script src="testdatefmt_km_KH.js"></script>
     <script src="testdatefmt_kn_IN.js"></script>
     <script src="testdatefmt_ko_KR.js"></script>
-    <!--<script src="testdatefmt_ku_Arab_IQ.js"></script>-->
+    <script src="testdatefmt_ku_Arab_IQ.js"></script>
     <script src="testdatefmt_lt_LT.js"></script>
     <script src="testdatefmt_lv_LV.js"></script>
     <script src="testdatefmt_mk_MK.js"></script>
